--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
 .App {
-  text-align: center;
+  padding: 20px;
+  font-family: Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 100px;
+  border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+th, td {
+  text-align: left;
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+th {
+  background-color: #c7d4d4fc;
+}
+
+input[type="text"] {
+  width: calc(100% - 40px);
+  padding: 10px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+}
+
+/* Styles for the export button */
+.export-button {
+  padding: 10px 20px;
+  background-color: #007BFF;
   color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
+.export-button:hover {
+  background-color: #0056b3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Positioning for the export button */
+.export-section {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+/* Media query for mobile devices */
+@media (max-width: 600px) {
+  .App {
+      padding: 10px; /* Adjust padding for smaller screens */
   }
-  to {
-    transform: rotate(360deg);
+
+  .export-section {
+      position: static; /* Change position to static for smaller screens */
+      text-align: center; /* Center the button */
+      margin-top: 20px; /* Add margin to separate from other elements */
+  }
+
+  table {
+      width: 100%;
+      display: block;
+      overflow-x: auto;
+  }
+
+  input[type="text"] {
+      width: calc(100% - 40px);
+  }
+}
+
+/* Media query for tablet devices */
+@media (min-width: 601px) and (max-width: 1024px) {
+  .export-section {
+      top: 40px; /* Adjust position for tablets */
+      right: 40px;
+  }
+}
+
+/* Media query for desktop devices */
+@media (min-width: 1025px) {
+  .export-section {
+      top: 20px; /* Adjust position for desktops */
+      right: 20px;
   }
 }
